OP-702: Launch Menu -> App Components - fixed illegible Details in My Apps for Black on White theme by associating the detail-actions CSS class's color property with the widget-details-color SASS variable.

--- a/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
+++ b/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
@@ -281,7 +281,7 @@
 
 .detail-actions {
 	padding-top:5px; 
-	color:white;
+	color: $widget-details-color;
 }
 
 .x-ie7 {
